@@ -1,13 +1,12 @@
 package ru.kata.spring.boot_security.demo.dao;
 
-import org.springframework.stereotype.Repository;
 import ru.kata.spring.boot_security.demo.model.Role;
+import org.springframework.stereotype.Repository;
 
 import javax.persistence.EntityManager;
 import javax.persistence.PersistenceContext;
 import javax.transaction.Transactional;
-import java.util.List;
-import java.util.Set;
+import java.util.*;
 import java.util.stream.Collectors;
 
 @Repository
@@ -23,11 +22,14 @@ public class RoleDaoImpl implements RoleDao {
         return entityManager.createQuery("SELECT r FROM Role r", Role.class)
                 .getResultList();
     }
-
     @Override
-    public Set<Role> getRolesByIds(List<Long> ids) {
+    public Optional<Role> getRoleById(Long id) {
+        return Optional.ofNullable(entityManager.find(Role.class, id));
+    }
+    @Override
+    public Set<Role> getRolesByIds(Collection<Long> ids) {
         if (ids == null || ids.isEmpty()) {
-            return Set.of();
+            return Collections.emptySet();
         }
 
         return entityManager.createQuery(
@@ -38,17 +40,6 @@ public class RoleDaoImpl implements RoleDao {
                 .collect(Collectors.toSet());
     }
 
-    @Override
-    public Role getRoleById(Long id) {
-
-        return entityManager.createQuery(
-                        "SELECT r FROM Role r WHERE r.id = :id", Role.class)
-                .setParameter("id", id)
-                .getResultList()
-                .stream()
-                .findFirst()
-                .orElse(null);
-    }
 
     @Override
     public void saveRole(Role role) {
